Fix #1607: minor UI fixes (#1835)
* fix #1610: weird padding for voting scorecard

* fixed #1611: unnecessary rounded corner

* fixed #1614: inconsistent design thingies

* fixed #1616: too much padding on tooltip

* Fixed #1617: oogabooga contrast

* Fixed #1619: inconsistent drop shadow

--- a/app/assets/stylesheets/components/_project_show_card.scss
+++ b/app/assets/stylesheets/components/_project_show_card.scss
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  box-shadow: var(--shadow);
 
   &__content {
     display: flex;
